Increased z-index to avoid bugs on overlapping elements

--- a/css/jquery-social-share-bar.css
+++ b/css/jquery-social-share-bar.css
@@ -3,6 +3,7 @@
   position: fixed;
   top: 50%;
   transform: translateY(-50%);
+  z-index: 9999;
 }
 
 .sharing-providers {
